--- a/config.toml
+++ b/config.toml
@@ -1,57 +1,40 @@
 baseURL = "https://anomalia.sk/"
 languageCode = "en-us"
-title = "anomalia | We are bottomless repository of magnificent ideas"
-theme = "minimal"
-disqusShortname = "username" # delete this to disable disqus comments
+title = "We are bottomless repository of magnificent ideas"
 googleAnalytics = ""
 
 [params]
     author = "y.06"
     description = ""
-    githubUsername = "#"
     accent = "#CE173C"
     showBorder = false
-    backgroundColor = "#151515"
-    font = "Work Sans" # should match the name on Google Fonts!
+    font = "Work Sans"
     highlight = true
     highlightStyle = "solarized-dark"
     highlightLanguages = ["go", "haskell", "kotlin", "scala", "swift"]
 
-[[menu.main]]
-    url = "/"
-    name = "HOME"
-    weight = 1
 
 [[menu.main]]
-    url = "#"	# using target like: url = "/works/"
+    url = "/works/"
     name = "WORKS"
     weight = 2
 
 [[menu.main]]
-    url = "#"
+    url = "/about-us/"
     name = "ABOUT US"
     weight = 3
 
 [[menu.main]]
-    url = "#"
+    url = "/contact/"
     name = "CONTACT"
     weight = 4
 
-# Social icons to be shown on the right-hand side of the navigation bar
-# The "name" field should match the name of the icon to be used
-# The list of available icons can be found at http://fontawesome.io/icons/
-
 [[menu.icon]]
-    url = "mailto:sayhello@anomalia.sk"
-    name = "envelope-o"
+    url = "https://instagram.com/"
+    name = "fa fa-instagram"
     weight = 1
 
 [[menu.icon]]
-    url = "https://instagram.com/"
-    name = "instagram"
-    weight = 2
-
-[[menu.icon]]
     url = "https://facebook.com/"
-    name = "facebook"
-    weight = 3
+    name = "fa fa-facebook"
+    weight = 2
